made to and from json converting and saving