@@ -32,14 +32,15 @@ public class SecurityConfig {
                         .requestMatchers(Constants.BASE_API_PATH + "/auth/*").permitAll()
                         .requestMatchers(Constants.BASE_API_PATH + "/cards/**").permitAll()
                         .requestMatchers(Constants.BASE_API_PATH + "/prescriptions/**").permitAll()
+                        .requestMatchers(Constants.BASE_API_PATH + "/reports/**").permitAll()
                         .anyRequest().authenticated()
         ).addFilterAfter(jwtFilter, UsernamePasswordAuthenticationFilter.class)
                 .logout(LogoutConfigurer::permitAll);
 
         http.cors(configurer -> configurer.configurationSource(request -> {
             var out = new CorsConfiguration().applyPermitDefaultValues();
-            out.setAllowedOriginPatterns(Arrays.asList("http://localhost:*"));
-            out.setAllowedMethods(Arrays.asList("*")); // Looks like by default, only HEAD, GET and POST are allowed
+            out.setAllowedOriginPatterns(List.of("http://localhost:*"));
+            out.setAllowedMethods(List.of("*")); // Looks like by default, only HEAD, GET and POST are allowed
             out.setAllowCredentials(true);
             return out;
         }));
